--- a/JACPTS Implementation.ipynb
+++ b/JACPTS Implementation.ipynb
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "385aa274",
+   "id": "684779fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,9 +932,71 @@
     "    Ja = np.zeros((npts, 1))\n",
     "    for k in range(0, npts):\n",
     "        Ja[k] = np.matmul(AA[k,:], H[:,k])\n",
-    "    return Ja\n",
+    "    return Ja"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "1f0e3125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def asy2_1(n, a, b, npts): #=======================VERIFIED=====================\n",
+    "    # Algorithm for computing nodes and weights near the boundary.\n",
     "\n",
-    "\n"
+    "    # Use Newton iterations to find the first few Bessel roots:\n",
+    "    smallK = min(30, npts)\n",
+    "    jk = jn_zeros(a, min(npts, smallK))  \n",
+    "    # Use asy formula for larger ones (See NIST 10.21.19, Olver 1974 p247)\n",
+    "    \n",
+    "    \n",
+    "    #Need to check if statement\n",
+    "    if npts > smallK:\n",
+    "        mu = 4*a**2\n",
+    "        a8 = 8*((np.arange(len(jk)+1,npts+1)+0.5*a-0.25)*np.pi)\n",
+    "        jk2 = 0.125*a8 - (mu-1)/a8 - 4*(mu-1)*(7*mu-31)/3/a8**3 - \\\n",
+    "              32*(mu-1)*(83*mu**2-982*mu+3779)/15/a8**5 - \\\n",
+    "              64*(mu-1)*(6949*mu**3-153855*mu**2+1585743*mu-6277237)/105/a8**7\n",
+    "        jk = np.concatenate([jk, jk2])\n",
+    "\n",
+    "        \n",
+    "    jk = np.real(jk[0:npts])\n",
+    "\n",
+    "    # Approximate roots via asymptotic formula: (see Olver 1974, NIST, 18.16.8)\n",
+    "    rho = n + 0.5*(a + b + 1) \n",
+    "    phik = jk/rho\n",
+    "    t = phik + ((a**2-0.25)*(1-phik/np.tan(phik))/(2*phik) - \\\n",
+    "        0.25*(a**2-b**2)*np.tan(0.5*phik))/rho**2\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # Compute higher terms:\n",
+    "#     tB1, A2, tB2, A3, v = asy2_higherterms(a, b, t, n)\n",
+    "\n",
+    "    dt = np.inf\n",
+    "    j = 0\n",
+    "    # Newton iteration:\n",
+    "    while np.all(np.abs(dt) > np.sqrt(np.finfo(float).eps) / 200) and j < 10:\n",
+    "        t=t.reshape(-1,1)\n",
+    "        vals, ders = feval_asy2(n, t, 1, a,b, rho) # Evaluate via asymptotic formula.\n",
+    "        dt = vals/ders                   # Newton update.\n",
+    "        t = t + dt                       # Next iterate.\n",
+    "        j += 1\n",
+    "    vals, ders = feval_asy2(n, t, 1, a, b, rho)     # Evaluate via asymptotic formula.\n",
+    "    dt = vals/ders                       # Newton update\n",
+    "    t = t + dt\n",
+    "    # flip:\n",
+    "    t = t[npts-1::-1]\n",
+    "    ders = ders[npts-1::-1]\n",
+    "\n",
+    "    # Revert to x-space:\n",
+    "    x = np.cos(t)      \n",
+    "    w = (1./ders**2).T   \n",
+    "    v = np.sin(t)/ders\n",
+    "    \n",
+    "    \n",
+    "    return x, w, v"
    ]
   },
   {
@@ -1070,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "f2f7b34a",
+   "id": "f2bd9fa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,104 +1579,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 148,
    "id": "8b9ef288",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.39800455 0.6524264  0.90087497 1.14750554 1.39354402]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Improper number of dimensions to norm.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 65\u001b[0m\n\u001b[1;32m     59\u001b[0m     v \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msin(t)\u001b[38;5;241m/\u001b[39mders\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x, w, v\n\u001b[0;32m---> 65\u001b[0m asy2Test \u001b[38;5;241m=\u001b[39m \u001b[43masy2_1\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28mprint\u001b[39m(asy2Test)\n",
-      "Cell \u001b[0;32mIn[42], line 43\u001b[0m, in \u001b[0;36masy2_1\u001b[0;34m(n, a, b, npts)\u001b[0m\n\u001b[1;32m     41\u001b[0m j \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m# Newton iteration:\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnorm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minf\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(np\u001b[38;5;241m.\u001b[39mfinfo(\u001b[38;5;28mfloat\u001b[39m)\u001b[38;5;241m.\u001b[39meps)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m200\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m j \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[1;32m     44\u001b[0m     vals, ders \u001b[38;5;241m=\u001b[39m feval_asy2(n, t, \u001b[38;5;241m1\u001b[39m, a,b, rho) \u001b[38;5;66;03m# Evaluate via asymptotic formula.\u001b[39;00m\n\u001b[1;32m     45\u001b[0m     dt \u001b[38;5;241m=\u001b[39m vals\u001b[38;5;241m/\u001b[39mders                   \u001b[38;5;66;03m# Newton update.\u001b[39;00m\n",
-      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mnorm\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.10/site-packages/numpy/linalg/linalg.py:2607\u001b[0m, in \u001b[0;36mnorm\u001b[0;34m(x, ord, axis, keepdims)\u001b[0m\n\u001b[1;32m   2605\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ret\n\u001b[1;32m   2606\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 2607\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImproper number of dimensions to norm.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Improper number of dimensions to norm."
+      "x\n",
+      "[[0.17610165]\n",
+      " [0.41061853]\n",
+      " [0.62083802]\n",
+      " [0.79456861]\n",
+      " [0.92181987]]\n",
+      "w\n",
+      "[[0.0066487  0.00544245 0.00294987 0.00092115 0.00010938]]\n",
+      "v\n",
+      "[[ 0.08026528]\n",
+      " [-0.06726669]\n",
+      " [ 0.04257787]\n",
+      " [-0.01842802]\n",
+      " [ 0.00405397]]\n"
      ]
     }
    ],
    "source": [
     "#=====Check Asy2======\n",
     "\n",
+    "#VERIFIED\n",
     "\n",
-    "def asy2_1(n, a, b, npts):\n",
-    "    # Algorithm for computing nodes and weights near the boundary.\n",
+    "# x\n",
+    "# 0.176101651563189\n",
+    "# 0.410618524152389\n",
+    "# 0.620838010753476\n",
+    "# 0.794568599002320\n",
+    "# 0.921819868228935\n",
     "\n",
-    "    # Use Newton iterations to find the first few Bessel roots:\n",
-    "    smallK = min(30, npts)\n",
-    "    jk = jn_zeros(a, min(npts, smallK))  \n",
-    "    # Use asy formula for larger ones (See NIST 10.21.19, Olver 1974 p247)\n",
-    "    \n",
-    "    \n",
-    "    #Need to check if statement\n",
-    "    if npts > smallK:\n",
-    "        mu = 4*a**2\n",
-    "        a8 = 8*((np.arange(len(jk)+1,npts+1)+0.5*a-0.25)*np.pi)\n",
-    "        jk2 = 0.125*a8 - (mu-1)/a8 - 4*(mu-1)*(7*mu-31)/3/a8**3 - \\\n",
-    "              32*(mu-1)*(83*mu**2-982*mu+3779)/15/a8**5 - \\\n",
-    "              64*(mu-1)*(6949*mu**3-153855*mu**2+1585743*mu-6277237)/105/a8**7\n",
-    "        jk = np.concatenate([jk, jk2])\n",
+    "# w\n",
+    "# 0.00664866161087821\t0.00544241040737603\t0.00294985525077371\t0.000921144105071309\t0.000109382815142530\n",
     "\n",
-    "        \n",
-    "    jk = np.real(jk[0:npts])\n",
+    "# v\n",
+    "# 0.0802650278890440\n",
+    "# -0.0672664760538901\n",
+    "# 0.0425777351192206\n",
+    "# -0.0184279588881962\n",
+    "# 0.00405395652273077\n",
     "\n",
-    "    # Approximate roots via asymptotic formula: (see Olver 1974, NIST, 18.16.8)\n",
-    "    rho = n + 0.5*(a + b + 1) \n",
-    "    phik = jk/rho\n",
-    "    t = phik + ((a**2-0.25)*(1-phik/np.tan(phik))/(2*phik) - \\\n",
-    "        0.25*(a**2-b**2)*np.tan(0.5*phik))/rho**2\n",
-    "    print(t)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # Compute higher terms:\n",
-    "#     tB1, A2, tB2, A3, v = asy2_higherterms(a, b, t, n)\n",
-    "\n",
-    "    dt = np.inf\n",
-    "    j = 0\n",
-    "    # Newton iteration:\n",
-    "    while np.linalg.norm(dt, np.inf) > np.sqrt(np.finfo(float).eps)/200 and j < 10:\n",
-    "        vals, ders = feval_asy2(n, t, 1, a,b, rho) # Evaluate via asymptotic formula.\n",
-    "        dt = vals/ders                   # Newton update.\n",
-    "        t = t + dt                       # Next iterate.\n",
-    "        j += 1\n",
-    "    vals, ders = feval_asy2(n, t, 1)     # Evaluate via asymptotic formula.\n",
-    "    dt = vals/ders                       # Newton update\n",
-    "    t = t + dt\n",
-    "\n",
-    "    # flip:\n",
-    "    t = t[npts-1::-1]\n",
-    "    ders = ders[npts-1::-1]\n",
-    "\n",
-    "    # Revert to x-space:\n",
-    "    x = np.cos(t)      \n",
-    "    w = (1./ders**2).T   \n",
-    "    v = np.sin(t)/ders\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    return x, w, v\n",
-    "\n",
-    "asy2Test = asy2_1(10,2,3,5)\n",
-    "print(asy2Test)"
+    "asy2Testx, asy2Testw, asy2Testv = asy2_1(10,2,3,5)\n",
+    "print('x')\n",
+    "print(asy2Testx)\n",
+    "print('w')\n",
+    "print(asy2Testw)\n",
+    "print('v')\n",
+    "print(asy2Testv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 136,
    "id": "59cad6f8",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 139,
    "id": "8fd9c315",
    "metadata": {},
    "outputs": [
@@ -1673,6 +1698,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[0.398 ]\n",
+      " [0.6524]\n",
+      " [0.9009]\n",
+      " [1.1475]\n",
+      " [1.3935]]\n",
       "vals\n",
       "[[ 0.0044721 ]\n",
       " [-0.00328244]\n",
@@ -1734,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95673e08",
+   "id": "5d185802",
    "metadata": {},
    "outputs": [],
    "source": []
