--- a/JACPTS Implementation.ipynb
+++ b/JACPTS Implementation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5eb5573c",
    "metadata": {},
    "outputs": [],
@@ -30,96 +30,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 36,
    "id": "405233fd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "slice indices must be integers or None or have an __index__ method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[96], line 33\u001b[0m\n\u001b[1;32m     29\u001b[0m     v[bdyidx2] \u001b[38;5;241m=\u001b[39m vbdy\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x, w, v\n\u001b[0;32m---> 33\u001b[0m jacPtsTest \u001b[38;5;241m=\u001b[39m \u001b[43masy\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28mprint\u001b[39m(jacPtsTest)\n",
-      "Cell \u001b[0;32mIn[96], line 3\u001b[0m, in \u001b[0;36masy\u001b[0;34m(n, a, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21masy\u001b[39m(n, a, b):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m:  \u001b[38;5;66;03m# Use only boundary formula:\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m         xbdy, wbdy, vbdy \u001b[38;5;241m=\u001b[39m \u001b[43masy2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mceil\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m         xbdy2, wbdy2, vbdy2 \u001b[38;5;241m=\u001b[39m asy2(n, b, a, np\u001b[38;5;241m.\u001b[39mfloor(n\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m      5\u001b[0m         x \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate([\u001b[38;5;241m-\u001b[39mxbdy2[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m], xbdy])\n",
-      "Cell \u001b[0;32mIn[11], line 20\u001b[0m, in \u001b[0;36masy2\u001b[0;34m(n, a, b, npts)\u001b[0m\n\u001b[1;32m     14\u001b[0m     jk2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.125\u001b[39m\u001b[38;5;241m*\u001b[39ma8 \u001b[38;5;241m-\u001b[39m (mu\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m/\u001b[39ma8 \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m4\u001b[39m\u001b[38;5;241m*\u001b[39m(mu\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m7\u001b[39m\u001b[38;5;241m*\u001b[39mmu\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m31\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m3\u001b[39m\u001b[38;5;241m/\u001b[39ma8\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3\u001b[39m \u001b[38;5;241m-\u001b[39m \\\n\u001b[1;32m     15\u001b[0m           \u001b[38;5;241m32\u001b[39m\u001b[38;5;241m*\u001b[39m(mu\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m83\u001b[39m\u001b[38;5;241m*\u001b[39mmu\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m982\u001b[39m\u001b[38;5;241m*\u001b[39mmu\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m3779\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m15\u001b[39m\u001b[38;5;241m/\u001b[39ma8\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m5\u001b[39m \u001b[38;5;241m-\u001b[39m \\\n\u001b[1;32m     16\u001b[0m           \u001b[38;5;241m64\u001b[39m\u001b[38;5;241m*\u001b[39m(mu\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m(\u001b[38;5;241m6949\u001b[39m\u001b[38;5;241m*\u001b[39mmu\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m153855\u001b[39m\u001b[38;5;241m*\u001b[39mmu\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1585743\u001b[39m\u001b[38;5;241m*\u001b[39mmu\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m6277237\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m105\u001b[39m\u001b[38;5;241m/\u001b[39ma8\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m7\u001b[39m\n\u001b[1;32m     17\u001b[0m     jk \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate([jk, jk2])\n\u001b[0;32m---> 20\u001b[0m jk \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreal(\u001b[43mjk\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43mnpts\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Approximate roots via asymptotic formula: (see Olver 1974, NIST, 18.16.8)\u001b[39;00m\n\u001b[1;32m     23\u001b[0m rho \u001b[38;5;241m=\u001b[39m n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.5\u001b[39m\u001b[38;5;241m*\u001b[39m(a \u001b[38;5;241m+\u001b[39m b \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \n",
-      "\u001b[0;31mTypeError\u001b[0m: slice indices must be integers or None or have an __index__ method"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([[-0.97409633],\n",
+      "       [-0.9397213 ],\n",
+      "       [-0.89367356],\n",
+      "       [-0.83644146],\n",
+      "       [-0.76872416],\n",
+      "       [-0.69136628],\n",
+      "       [-0.6053377 ],\n",
+      "       [-0.51171887],\n",
+      "       [-0.41168631],\n",
+      "       [-0.30649756],\n",
+      "       [-0.19747515],\n",
+      "       [-0.08598991],\n",
+      "       [ 0.02655628],\n",
+      "       [ 0.13874819],\n",
+      "       [ 0.24917501],\n",
+      "       [ 0.35644813],\n",
+      "       [ 0.45921857],\n",
+      "       [ 0.55619401],\n",
+      "       [ 0.64615502],\n",
+      "       [ 0.72797044],\n",
+      "       [ 0.80061165],\n",
+      "       [ 0.8631657 ],\n",
+      "       [ 0.9148473 ],\n",
+      "       [ 0.95501087],\n",
+      "       [ 0.98317288]]), array([3.73650433e-08, 6.42571341e-07, 4.31902667e-06, 1.78887358e-05,\n",
+      "       5.44733103e-05, 1.33322539e-04, 2.76130040e-04, 4.99868604e-04,\n",
+      "       8.07996031e-04, 1.18327828e-03, 1.58568095e-03, 1.95747937e-03,\n",
+      "       2.23527218e-03, 2.36585878e-03, 2.32107575e-03, 2.10654025e-03,\n",
+      "       1.76102745e-03, 1.34634145e-03, 9.30862315e-04, 5.72177940e-04,\n",
+      "       3.04441685e-04, 1.34223070e-04, 4.53657189e-05, 1.00239673e-05,\n",
+      "       9.43312299e-07]), array([[ 4.37116856e-05],\n",
+      "       [-2.74102057e-04],\n",
+      "       [ 9.32537135e-04],\n",
+      "       [-2.31800827e-03],\n",
+      "       [ 4.72048989e-03],\n",
+      "       [-8.34242499e-03],\n",
+      "       [ 1.32267410e-02],\n",
+      "       [-1.92087197e-02],\n",
+      "       [ 2.59046776e-02],\n",
+      "       [-3.27432470e-02],\n",
+      "       [ 3.90364579e-02],\n",
+      "       [-4.40795333e-02],\n",
+      "       [ 4.72619910e-02],\n",
+      "       [-4.81696324e-02],\n",
+      "       [ 4.66579507e-02],\n",
+      "       [-4.28823182e-02],\n",
+      "       [ 3.72781304e-02],\n",
+      "       [-3.04934146e-02],\n",
+      "       [ 2.32854486e-02],\n",
+      "       [-1.63999212e-02],\n",
+      "       [ 1.04547097e-02],\n",
+      "       [-5.84974337e-03],\n",
+      "       [ 2.71975749e-03],\n",
+      "       [-9.38962398e-04],\n",
+      "       [ 1.77424221e-04]]))\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "jacPtsTest = asy(10,1,3)\n",
+    "jacPtsTest = asy(25,2,3)\n",
     "print(jacPtsTest)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebed2565",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b00ed155",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71998cab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0f27ba1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "516a48d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c687d4f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59de3c4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b721bb0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -131,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "d9ac2fd3",
    "metadata": {},
    "outputs": [],
@@ -227,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7c060681",
    "metadata": {},
    "outputs": [],
@@ -279,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1e67c354",
    "metadata": {},
    "outputs": [],
@@ -361,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "01e79f71",
    "metadata": {},
    "outputs": [],
@@ -390,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "558b9988",
    "metadata": {},
    "outputs": [],
@@ -418,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0ce1496f",
    "metadata": {},
    "outputs": [],
@@ -506,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7b1119ff",
    "metadata": {},
    "outputs": [],
@@ -673,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "5d5558fe",
    "metadata": {},
    "outputs": [],
@@ -745,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c8135d83",
    "metadata": {},
    "outputs": [],
@@ -867,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ebc73939",
    "metadata": {},
    "outputs": [],
@@ -953,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "id": "044adec2",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "id": "ba874ee7",
    "metadata": {},
    "outputs": [],
@@ -1205,6 +1185,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3abc4826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def asy(n, a, b):\n",
+    "    if n <= 20:  # Use only boundary formula:\n",
+    "        xbdy, wbdy, vbdy = asy2(n, a, b, np.ceil(n/2))\n",
+    "        xbdy2, wbdy2, vbdy2 = asy2(n, b, a, np.floor(n/2))\n",
+    "        x = np.concatenate([-xbdy2[::-1], xbdy])\n",
+    "        w = np.concatenate([wbdy2[::-1], wbdy])\n",
+    "        v = np.concatenate([vbdy2[::-1], vbdy])\n",
+    "        return x, w, v\n",
+    "\n",
+    "    # Determine switch between interior and boundary regions:\n",
+    "    nbdy = 10\n",
+    "    bdyidx1 = np.arange(n - (nbdy - 1), n + 1)  # in Python, indexing starts from 0\n",
+    "    bdyidx2 = np.arange(nbdy - 1, -1, -1)\n",
+    "\n",
+    "    # Interior formula:\n",
+    "    x, w, v = asy1(n, a, b, nbdy)\n",
+    "\n",
+    "    # Boundary formula (right):\n",
+    "    xbdy, wbdy, vbdy = asy2(n, a, b, nbdy)\n",
+    "\n",
+    "    x[bdyidx1-1] = xbdy\n",
+    "    w[bdyidx1-1] = wbdy\n",
+    "    v[bdyidx1-1] = vbdy\n",
+    "\n",
+    "    # Boundary formula (left):\n",
+    "    if a != b:\n",
+    "        xbdy, wbdy, vbdy = asy2(n, b, a, nbdy)\n",
+    "    x[bdyidx2] = -xbdy\n",
+    "    w[bdyidx2] = wbdy\n",
+    "    v[bdyidx2] = vbdy\n",
+    "\n",
+    "    return x, w, v"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0d40ecfa",
    "metadata": {},
@@ -1214,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "c372a112",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "86d68381",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "511c7dab",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "8c162a05",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "cdd1c016",
    "metadata": {},
    "outputs": [
@@ -1423,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "3a9b4ad1",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "8019468b",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "a89faee8",
    "metadata": {
     "scrolled": true
@@ -1535,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "00d42e6c",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "8b9ef288",
    "metadata": {
     "scrolled": false
@@ -1628,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "59cad6f8",
    "metadata": {},
    "outputs": [
@@ -1662,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "f7fab9a2",
    "metadata": {},
    "outputs": [],
@@ -1679,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "8fd9c315",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "id": "9cd731fe",
    "metadata": {},
    "outputs": [
@@ -1774,13 +1795,31 @@
       " 3.04441677e-04 1.34223055e-04 4.53656844e-05 1.00238708e-05\n",
       " 9.42904905e-07]\n",
       "v\n",
-      "[ 4.37114973e-05 -2.74102055e-04  9.32537134e-04 -2.31800827e-03\n",
-      "  4.72048988e-03 -8.34242498e-03  1.32267410e-02 -1.92087197e-02\n",
-      "  2.59046776e-02 -3.27432469e-02  3.90364579e-02 -4.40795333e-02\n",
-      "  4.72619910e-02 -4.81696324e-02  4.66579507e-02 -4.28823181e-02\n",
-      "  3.72781303e-02 -3.04934145e-02  2.32854485e-02 -1.63999211e-02\n",
-      "  1.04547096e-02 -5.84974305e-03  2.71975645e-03 -9.38957877e-04\n",
-      "  1.77385920e-04]\n"
+      "[[ 4.37114973e-05]\n",
+      " [-2.74102055e-04]\n",
+      " [ 9.32537134e-04]\n",
+      " [-2.31800827e-03]\n",
+      " [ 4.72048988e-03]\n",
+      " [-8.34242498e-03]\n",
+      " [ 1.32267410e-02]\n",
+      " [-1.92087197e-02]\n",
+      " [ 2.59046776e-02]\n",
+      " [-3.27432469e-02]\n",
+      " [ 3.90364579e-02]\n",
+      " [-4.40795333e-02]\n",
+      " [ 4.72619910e-02]\n",
+      " [-4.81696324e-02]\n",
+      " [ 4.66579507e-02]\n",
+      " [-4.28823181e-02]\n",
+      " [ 3.72781303e-02]\n",
+      " [-3.04934145e-02]\n",
+      " [ 2.32854485e-02]\n",
+      " [-1.63999211e-02]\n",
+      " [ 1.04547096e-02]\n",
+      " [-5.84974305e-03]\n",
+      " [ 2.71975645e-03]\n",
+      " [-9.38957877e-04]\n",
+      " [ 1.77385920e-04]]\n"
      ]
     }
    ],
@@ -1860,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 33,
    "id": "91922a95",
    "metadata": {},
    "outputs": [
@@ -1932,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 34,
    "id": "e052f6a4",
    "metadata": {},
    "outputs": [
@@ -2005,38 +2044,6 @@
    ],
    "source": [
     "#=====CHECK ASY=====\n",
-    "def asy(n, a, b):\n",
-    "    if n <= 20:  # Use only boundary formula:\n",
-    "        xbdy, wbdy, vbdy = asy2(n, a, b, np.ceil(n/2))\n",
-    "        xbdy2, wbdy2, vbdy2 = asy2(n, b, a, np.floor(n/2))\n",
-    "        x = np.concatenate([-xbdy2[::-1], xbdy])\n",
-    "        w = np.concatenate([wbdy2[::-1], wbdy])\n",
-    "        v = np.concatenate([vbdy2[::-1], vbdy])\n",
-    "        return x, w, v\n",
-    "\n",
-    "    # Determine switch between interior and boundary regions:\n",
-    "    nbdy = 10\n",
-    "    bdyidx1 = np.arange(n - (nbdy - 1), n + 1)  # in Python, indexing starts from 0\n",
-    "    bdyidx2 = np.arange(nbdy - 1, -1, -1)\n",
-    "\n",
-    "    # Interior formula:\n",
-    "    x, w, v = asy1(n, a, b, nbdy)\n",
-    "\n",
-    "    # Boundary formula (right):\n",
-    "    xbdy, wbdy, vbdy = asy2(n, a, b, nbdy)\n",
-    "\n",
-    "    x[bdyidx1-1] = xbdy\n",
-    "    w[bdyidx1-1] = wbdy\n",
-    "    v[bdyidx1-1] = vbdy\n",
-    "\n",
-    "    # Boundary formula (left):\n",
-    "    if a != b:\n",
-    "        xbdy, wbdy, vbdy = asy2(n, b, a, nbdy)\n",
-    "    x[bdyidx2] = -xbdy\n",
-    "    w[bdyidx2] = wbdy\n",
-    "    v[bdyidx2] = vbdy\n",
-    "\n",
-    "    return x, w, v\n",
     "\n",
     "\n",
     "jacTestx, jacTestw, jacTestv = asy(25,2,3)\n",
@@ -2047,14 +2054,6 @@
     "print('v')\n",
     "print(jacTestv)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d1e4190",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
